Fix accordionitem-is-open alignment at breakpoints
* Remove `width: calc(100% + 40px);` by default so the expanded item sits within the bounds of the accordion on smaller screens
* Modify `margin: 0 auto;` to `margin: 0;` by default to correctly align the expanded item within the accordion on smaller screens
* Remove left and right borders and border radius by default so the expanded item sits flush within the accordion on smaller screens
* Add `xui-breakpoint-wide` style for larger screens
* Add `width: calc(100% + 40px);` so the expanded item overhangs the sides of the accordion on larger screens
* Add `margin: 0 auto;` to center the expanded item horizontally with the accordion on larger screens
* Add left and right borders and border radius so the expanded item has a complete border on larger screens

Fixes #913
CC @UXE/uxe-team

--- a/src/sass/objects/_accordion.scss
+++ b/src/sass/objects/_accordion.scss
@@ -2,7 +2,11 @@
 //
 // Used to display an expandable/collapsible list to users.
 //
-// `xui-accordionitem-is-open` : This class toggles the accordion items open and closed. Includes transition animation.
+// The `.xui-accordionitem-is-open` class toggles which item is open and includes transition animations.
+//
+// The `.xui-accordionitem-layout` class provides standard padding to collapsed items and large padding to open items.
+// It also provides a responsive story; open items sit flush within the border of the accordion on narrow screens but expand
+// in width to overhang the sides of the accordion on standard and wide screens.
 //
 // Markup:
 //<ul class="xui-accordion xui-page-width-standard xui-panel" role="tablist" aria-multiselectable="true">
@@ -79,21 +83,31 @@
 	}
 }
 
-.#{$ns}-accordionitem-is-open.#{$ns}-accordionitem-layout {
+.#{$ns}-accordionitem-is-open {
+	&.#{$ns}-accordionitem-layout {
+		@include xui-breakpoint-wide { /** increase width of open accordion item by 40px on larger screen sizes **/
+			border-left: $xui-divider-standard;
+			border-radius: $xui-radius;
+			border-right: $xui-divider-standard;
+			margin-left: -20px;
+			width: calc(100% + 40px);
+		}
+	}
+
 	.#{$ns}-accordionitem--expanded {
 		padding: $xui-s-xxlarge;
 	}
 }
 
 .#{$ns}-accordionitem-is-open {
-	border: $xui-divider-standard;
-	border-radius: $xui-radius;
+	border-bottom: $xui-divider-standard;
+	border-top: $xui-divider-standard;
 	box-shadow: $xui-shadow-depth-2;
 	height: auto;
-	margin: 0 -20px;
+	margin: 0;
 	max-width: 100vw;
 	transform: translateY(-1px); /** hides the border-bottom of the accordion--collapsed above it **/
-	width: calc(100% + 40px);
+
 
 	> .#{$ns}-accordionitem--collapsed {
 		border: 0;
